--- a/CleanArchitectureApplication/CleanArchitectureApplication.csproj
+++ b/CleanArchitectureApplication/CleanArchitectureApplication.csproj
@@ -15,4 +15,11 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Features\Categories\Commands\" />
+    <Folder Include="Repositories\Features\Events\Commands\CreateEvent\" />
+    <Folder Include="Repositories\Features\Orders\Commands\" />
+    <Folder Include="Repositories\Features\Orders\Queries\" />
+  </ItemGroup>
+
 </Project>
