--- a/CleanArchitectureApplication/CleanArchitectureApplication.csproj
+++ b/CleanArchitectureApplication/CleanArchitectureApplication.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\Features\Events\Commands\CreateEvent\" />
+    <Folder Include="Repositories\Features\Categories\Commands\CreateCategories\" />
     <Folder Include="Repositories\Features\Orders\Commands\" />
     <Folder Include="Repositories\Features\Orders\Queries\" />
   </ItemGroup>
