--- a/CleanArchitectureAPI/CleanArchitectureAPI.csproj
+++ b/CleanArchitectureAPI/CleanArchitectureAPI.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitectureApplication\CleanArchitectureApplication.csproj" />
+    <ProjectReference Include="..\CleanArchitectureContext\CleanArchitectureContext.csproj" />
+    <ProjectReference Include="..\CleanArchitectureDomain\CleanArchitectureDomain.csproj" />
+    <ProjectReference Include="..\CleanArchitectureInfrastructure\CleanArchitectureInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
